(rule
 (targets examples.ml)
 (action
  (run ./genex_dune.sh))
 (deps
  (source_tree ../examples)
  (file examplelist.txt)))

(executable
 (name live)
 (modules examples interface webutils live)
 (modes js)
 (preprocess
  (pps js_of_ocaml-ppx))
 (libraries braidMPST.lib js_of_ocaml-tyxml js_of_ocaml str))
